changed title and added a head
created index2.css and renamed HTML2 to index2.html

font family changed for h1

--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>title</title>
+        <title>Citron</title>
     </head>
     <body>
-        <h1></h1>
+        <h1>Citron</h1>
     </body>
 </html>
